@@ -204,7 +204,7 @@ confint(object, parm, level, fixed=FALSE, sigma2, tau2, rho, gamma2, phi,
     </tr>
     <tr>
       <th>control</th>
-      <td><p>list of control values for the iterative algorithm. If unspecified, default values are defined inside the function. See &#8216;Note&#8217;.</p></td>
+      <td><p>list of control values for the iterative algorithms. If unspecified, default values are defined inside the function. See &#8216;Note&#8217;.</p></td>
     </tr>
     <tr>
       <th>&#8230;</th>
