@@ -1,6 +1,8 @@
 Changes in Version 2.1-0 (2019-01-22)
 =====================================
 
+   o moved 'tol' argument in permutest() to 'control' and renamed to 'comptol'
+
    o added 'PMM' and 'GENQM' estimators in rma.uni()
 
    o added vif() function to get variance inflation factors
